--- a/index.html
+++ b/index.html
@@ -1,95 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jobee App Development | Creative Mobile Solutions</title>
-  <!-- Link to your stylesheet -->
-  <link rel="stylesheet" href="css/style.css" />
-  <!-- Optional: Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-    rel="stylesheet"
-  />
-  <!-- Optional: Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
-<body>
-  <header>
-    <div class="header-container">
-      <!-- LOGO + COMPANY NAME CONTAINER -->
-      <div class="header-brand">
-        <a href="index.html" class="logo-link">
-          <img
-            src="images/bee-logo.png"
-            alt="Jobee Dev Logo"
-            class="company-logo"
-          />
-        </a>
-        <h1>Jobee Development</h1>
-      </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <!-- NAVIGATION MENU -->
-      <nav>
-        <a href="index.html" class="active">Home</a> <!-- Add 'active' class -->
-        <a href="apps.html">Apps</a>
-        <a href="privacy.html">Privacy Policy</a>
-      </nav>
-    </div>
-  </header>
+    <!-- Primary Meta Tags -->
+    <title>Jobee Development — Dispatch Commander (Coming Soon)</title>
+    <meta name="title" content="Jobee Development — Dispatch Commander (Coming Soon)" />
+    <meta
+      name="description"
+      content="Dispatch Commander is the real‑time global emergency‑dispatch simulator for mobile. Coordinate police, fire, and medical units anywhere on Earth. Coming soon from Jobee Development."
+    />
 
-  <main>
-    <!-- Hero Section -->
-    <section class="hero">
-      <div class="container">
-        <h2>Building Buzz-Worthy Mobile Apps</h2>
-        <p>
-          Creative design meets powerful code. We craft intuitive and engaging mobile experiences that users love.
-        </p>
-        <a href="apps.html" class="btn">Explore Our Apps</a>
+    <!-- TailwindCSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Fonts & Icons -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600;700&family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
+    <style>
+      :root {
+        --bg: #000000;
+        --fg: #d1d5db; /* tailwind gray-300 */
+        --accent: #00ff55;
+        --accent-soft: rgba(0, 255, 85, 0.2);
+      }
+      html {
+        scroll-behavior: smooth;
+      }
+      body {
+        font-family: "Inter", sans-serif;
+        background: var(--bg);
+        color: var(--fg);
+      }
+      .code {
+        font-family: "IBM Plex Mono", monospace;
+      }
+      /* neon glow */
+      .glow {
+        color: var(--accent);
+        text-shadow: 0 0 8px var(--accent), 0 0 16px var(--accent);
+      }
+      /* simple glitch effect */
+      .glitch {
+        position: relative;
+      }
+      .glitch::before,
+      .glitch::after {
+        content: attr(data-text);
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        opacity: 0.8;
+        clip-path: inset(0 0 0 0);
+      }
+      .glitch::before {
+        animation: glitch-top 2s infinite linear alternate-reverse;
+        color: #00e1ff;
+      }
+      .glitch::after {
+        animation: glitch-bottom 2s infinite linear alternate-reverse;
+        color: #ff005b;
+      }
+      @keyframes glitch-top {
+        0% {
+          clip-path: inset(0 0 85% 0);
+          transform: translate(3px, -3px);
+        }
+        10% {
+          clip-path: inset(0 0 75% 0);
+          transform: translate(-2px, 2px);
+        }
+        20% {
+          clip-path: inset(0 0 90% 0);
+          transform: translate(2px, -1px);
+        }
+        30%, 100% {
+          clip-path: inset(0 0 85% 0);
+          transform: none;
+        }
+      }
+      @keyframes glitch-bottom {
+        0% {
+          clip-path: inset(75% 0 0 0);
+          transform: translate(-3px, 3px);
+        }
+        10% {
+          clip-path: inset(65% 0 0 0);
+          transform: translate(2px, -2px);
+        }
+        20% {
+          clip-path: inset(80% 0 0 0);
+          transform: translate(-1px, 2px);
+        }
+        30%, 100% {
+          clip-path: inset(75% 0 0 0);
+          transform: none;
+        }
+      }
+      /* decorative grid lines */
+      .grid-overlay {
+        background-image: linear-gradient(
+            to right,
+            rgba(255, 255, 255, 0.04) 1px,
+            transparent 1px
+          ),
+          linear-gradient(rgba(255, 255, 255, 0.04) 1px, transparent 1px);
+        background-size: 60px 60px;
+        pointer-events: none;
+      }
+    </style>
+  </head>
+  <body class="relative">
+    <!-- GRID OVERLAY -->
+    <div
+      class="fixed inset-0 z-0 grid-overlay backdrop-blur-sm pointer-events-none"
+    ></div>
+
+    <!-- HERO -->
+    <header class="relative z-10 flex flex-col items-center justify-center h-screen text-center p-6">
+      <h1
+        class="glitch text-5xl sm:text-7xl font-extrabold mb-6"
+        data-text="DISPATCH COMMANDER"
+      >
+        DISPATCH COMMANDER
+      </h1>
+      <p class="code text-lg sm:text-xl max-w-xl mx-auto mb-10">
+        Real‑time <span class="glow">global</span> emergency‑dispatch simulator.
+        Coordinate police, fire, medical & specialist units <span class="glow">anywhere</span> on Earth.
+      </p>
+      <a
+        href="#notify"
+        class="inline-block code text-sm tracking-wider px-8 py-3 rounded-md border border-accent glow hover:bg-accent-soft transition"
+      >
+        JOIN THE WAITLIST
+      </a>
+    </header>
+
+    <!-- FEATURES -->
+    <section class="relative z-10 py-24 px-6 max-w-6xl mx-auto">
+      <div class="grid gap-12 md:grid-cols-3">
+        <!-- Feature 1 -->
+        <div class="flex flex-col items-start">
+          <span class="material-icons text-3xl glow mb-3">public</span>
+          <h3 class="text-xl font-semibold mb-2">World‑Wide Maps</h3>
+          <p class="code text-sm opacity-80">
+            From New York to Nairobi – tap anywhere on the globe and deploy your
+            response network in seconds.
+          </p>
+        </div>
+        <!-- Feature 2 -->
+        <div class="flex flex-col items-start">
+          <span class="material-icons text-3xl glow mb-3">local_fire_department</span>
+          <h3 class="text-xl font-semibold mb-2">Multi‑Agency Incidents</h3>
+          <p class="code text-sm opacity-80">
+            Handle complex scenarios requiring seamless coordination between
+            police, fire, ambulance, coast guard & more.
+          </p>
+        </div>
+        <!-- Feature 3 -->
+        <div class="flex flex-col items-start">
+          <span class="material-icons text-3xl glow mb-3">electric_car</span>
+          <h3 class="text-xl font-semibold mb-2">Specialist Assets</h3>
+          <p class="code text-sm opacity-80">
+            Mobilize K9 units, air ambulances, hazmat teams, riot vans, rescue
+            helicopters, drones & customised task‑force vehicles.
+          </p>
+        </div>
       </div>
     </section>
 
-    <div class="container">
-      <section>
-        <h2>Welcome to Jobee Development</h2>
-        <p>
-          We are a passionate team dedicated to designing and developing high-quality mobile applications for various platforms. From concept to launch, we bring your ideas to life with clean code and user-centric design.
+    <!-- SCREENSHOTS (PLACEHOLDER) -->
+    <section class="relative z-10 py-20 bg-gray-900/50 backdrop-blur-lg">
+      <div class="max-w-5xl mx-auto px-6 text-center">
+        <h2 class="text-2xl font-semibold mb-10">Sneak Peek</h2>
+        <div class="grid sm:grid-cols-2 gap-8">
+          <img
+            src="/assets/dispatch-init.png"
+            alt="Dispatch Commander system initialization screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft"
+          />
+          <img
+            src="/assets/dispatch-hub.png"
+            alt="Dispatch Commander operations center screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft"
+          />
+          <img
+            src="/assets/dispatch-map.png"
+            alt="Dispatch Commander global map screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft sm:col-span-2"
+          />
+        </div>
+        <p class="code text-xs mt-6 opacity-70">
+          *Screenshots from pre‑release build v2.4.1. UI and gameplay may change
+          before launch.
         </p>
-        <p>
-          Whether you need a utility app, a fun game, or a complex business solution, we have the expertise to deliver.
-        </p>
-      </section>
+      </div>
+    </section>
 
-      <section>
-        <h2>Our Services</h2>
-        <!-- Consider using icons here -->
-        <p><i class="fas fa-mobile-alt fa-fw"></i> <strong>Native App Development:</strong> Crafting seamless experiences for iOS and Android.</p>
-        <p><i class="fas fa-code fa-fw"></i> <strong>Cross-Platform Solutions:</strong> Efficient development using modern frameworks.</p>
-        <p><i class="fas fa-lightbulb fa-fw"></i> <strong>UI/UX Design:</strong> Creating intuitive and visually appealing interfaces.</p>
-        <p><i class="fas fa-cogs fa-fw"></i> <strong>Maintenance & Support:</strong> Keeping your apps running smoothly post-launch.</p>
-      </section>
+    <!-- CALL TO ACTION -->
+    <section id="notify" class="relative z-10 py-24 px-6 text-center">
+      <h2 class="text-3xl font-semibold mb-6">
+        Be the first to go<br class="sm:hidden" />
+        <span class="glow">LIVE</span>
+      </h2>
+      <p class="code max-w-lg mx-auto mb-8">
+        Sign up now and we’ll ping you the moment Dispatch Commander hits the App Store & Google Play.
+      </p>
+      <a
+        href="mailto:info@jobee.dev?subject=Dispatch%20Commander%20Early%20Access"
+        class="inline-block code text-sm tracking-wider px-10 py-4 rounded-md bg-accent-soft border border-accent glow hover:bg-accent transition"
+      >
+        REQUEST EARLY ACCESS
+      </a>
+    </section>
 
-      <section>
-          <h2>Featured App</h2>
-          <h3>Dispatch Commander</h3>
-          <p>
-              Our flagship logistics and dispatch management tool. Streamline your operations with powerful features designed for efficiency.
-              <!-- Add more descriptive text -->
-          </p>
-          <a href="apps.html" class="btn">Learn More</a>
-      </section>
-    </div>
-  </main>
+    <!-- FOOTER -->
+    <footer class="relative z-10 text-center py-10 text-sm opacity-60 code">
+      <p class="mb-2">
+        &copy; <span id="year"></span> Jobee Development
+      </p>
+      <p>All trademarks referenced herein are the properties of their respective owners.</p>
+    </footer>
 
-  <footer>
-    <p>© 2025 Jobee Developments. All Rights Reserved.</p>
-    <!-- Optional: Add social media links here -->
-    <!-- <p>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-    </p> -->
-  </footer>
-
-</body>
+    <script>
+      // dynamic year
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
+  </body>
 </html>
