--- a/index.html
+++ b/index.html
@@ -1,95 +1,325 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jobee App Development | Creative Mobile Solutions</title>
-  <!-- Link to your stylesheet -->
-  <link rel="stylesheet" href="css/style.css" />
-  <!-- Optional: Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-    rel="stylesheet"
-  />
-  <!-- Optional: Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
-<body>
-  <header>
-    <div class="header-container">
-      <!-- LOGO + COMPANY NAME CONTAINER -->
-      <div class="header-brand">
-        <a href="index.html" class="logo-link">
-          <img
-            src="images/bee-logo.png"
-            alt="Jobee Dev Logo"
-            class="company-logo"
-          />
-        </a>
-        <h1>Jobee Development</h1>
-      </div>
+  <head>
+    <!-- ===================================================== -->
+    <!--      DISPATCH COMMANDER – Landing Page (prod)         -->
+    <!-- ===================================================== -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <!-- NAVIGATION MENU -->
-      <nav>
-        <a href="index.html" class="active">Home</a> <!-- Add 'active' class -->
-        <a href="apps.html">Apps</a>
-        <a href="privacy.html">Privacy Policy</a>
-      </nav>
-    </div>
-  </header>
+    <!-- PRIMARY SEO / ASO -->
+    <title>Dispatch Commander – Global Emergency-Dispatch Simulator | Jobee Development</title>
+    <meta
+      name="description"
+      content="Dispatch Commander is a real-time global emergency-dispatch simulation game for iOS & Android. Coordinate police, fire & ambulance units anywhere on earth. Coming soon from Jobee Development."
+    />
+    <meta
+      name="keywords"
+      content="dispatch commander, emergency dispatch game, police fire ambulance simulator, mobile simulation game, real time strategy app, jobee development"
+    />
+    <link rel="canonical" href="https://jobee.dev/" />
 
-  <main>
-    <!-- Hero Section -->
-    <section class="hero">
-      <div class="container">
-        <h2>Building Buzz-Worthy Mobile Apps</h2>
-        <p>
-          Creative design meets powerful code. We craft intuitive and engaging mobile experiences that users love.
-        </p>
-        <a href="apps.html" class="btn">Explore Our Apps</a>
+    <!-- OPEN GRAPH -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jobee.dev/" />
+    <meta property="og:title" content="Dispatch Commander – Global Emergency-Dispatch Simulator" />
+    <meta
+      property="og:description"
+      content="Coordinate police, fire & ambulance units anywhere on earth in this real-time mobile simulation game. Launching soon."
+    />
+    <meta property="og:image" content="https://jobee.dev/og-image.png" />
+
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@jobee_dev" />
+    <meta name="twitter:title" content="Dispatch Commander – Global Emergency-Dispatch Simulator" />
+    <meta
+      name="twitter:description"
+      content="Coordinate police, fire & ambulance units anywhere on earth in this real-time mobile simulation game. Launching soon."
+    />
+    <meta name="twitter:image" content="https://jobee.dev/og-image.png" />
+
+    <!-- STRUCTURED DATA -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "MobileApplication",
+        "name": "Dispatch Commander",
+        "operatingSystem": "iOS, Android",
+        "applicationCategory": "GameApplication",
+        "genre": "Simulation",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Jobee Development",
+          "url": "https://jobee.dev"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0.00",
+          "priceCurrency": "USD"
+        },
+        "description": "Dispatch Commander is a real-time global emergency-dispatch simulation game for mobile devices."
+      }
+    </script>
+
+    <!-- TAILWINDCSS (CDN) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- FONTS & ICONS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600;700&family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
+    <!-- THEME -->
+    <style>
+      :root {
+        --bg: #000;
+        --fg: #d1d5db;
+        --accent: #00ff55;
+        --accent-soft: rgba(0, 255, 85, 0.12);
+      }
+      html {
+        scroll-behavior: smooth;
+      }
+      body {
+        font-family: "Inter", sans-serif;
+        background: var(--bg);
+        color: var(--fg);
+      }
+      .code {
+        font-family: "IBM Plex Mono", monospace;
+      }
+      .glow {
+        color: var(--accent);
+        text-shadow: 0 0 8px var(--accent), 0 0 16px var(--accent);
+      }
+      .grid-overlay {
+        background-image: linear-gradient(
+            to right,
+            rgba(255, 255, 255, 0.04) 1px,
+            transparent 1px
+          ),
+          linear-gradient(rgba(255, 255, 255, 0.04) 1px, transparent 1px);
+        background-size: 60px 60px;
+        pointer-events: none;
+      }
+      /* CLI cursor */
+      .cursor {
+        display: inline-block;
+        width: 12px;
+        height: 16px;
+        background: var(--accent);
+        margin-left: 4px;
+        animation: blink 1s steps(2, start) infinite;
+      }
+      @keyframes blink {
+        to {
+          visibility: hidden;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <!-- ====================================== -->
+    <!-- DECORATIVE GRID                       -->
+    <!-- ====================================== -->
+    <div class="fixed inset-0 grid-overlay z-0"></div>
+
+    <!-- ====================================== -->
+    <!-- HERO                                   -->
+    <!-- ====================================== -->
+    <header class="relative z-10 flex flex-col items-center justify-center h-screen text-center p-6">
+      <h1 class="text-5xl sm:text-7xl font-extrabold mb-6 glow">
+        DISPATCH COMMANDER
+      </h1>
+      <p class="code text-lg sm:text-xl max-w-xl mx-auto mb-8">
+        Real-time <span class="glow">global</span> emergency-dispatch <span>simulation</span> game. Coordinate police, fire & ambulance units <span class="glow">anywhere</span> on Earth.
+      </p>
+
+      <!-- Animated Command-Line Feed -->
+      <pre id="cli-feed" class="code text-left text-sm sm:text-base max-w-2xl mx-auto bg-black/60 rounded-lg p-6 border border-accent-soft overflow-hidden shadow-lg"></pre>
+    </header>
+
+    <!-- ====================================== -->
+    <!-- FEATURES                               -->
+    <!-- ====================================== -->
+    <section class="relative z-10 py-20 px-6 max-w-6xl mx-auto">
+      <div class="grid gap-12 md:grid-cols-3">
+        <!-- 1. Global Coverage -->
+        <div>
+          <span class="material-icons text-3xl glow mb-3" aria-hidden="true">public</span>
+          <h2 class="text-xl font-semibold mb-2">Anywhere on the Globe</h2>
+          <p class="code text-sm opacity-80">
+            Tap any city – Dispatch Commander renders real-world maps so you can
+            protect the places you know.
+          </p>
+        </div>
+        <!-- 2. Multi-Agency -->
+        <div>
+          <span class="material-icons text-3xl glow mb-3" aria-hidden="true">groups</span>
+          <h2 class="text-xl font-semibold mb-2">Police · Fire · Ambulance</h2>
+          <p class="code text-sm opacity-80">
+            Balance limited resources and evolving threats across all three core
+            emergency services.
+          </p>
+        </div>
+        <!-- 3. Real-Time Decisions -->
+        <div>
+          <span class="material-icons text-3xl glow mb-3" aria-hidden="true">access_time</span>
+          <h2 class="text-xl font-semibold mb-2">Every Second Counts</h2>
+          <p class="code text-sm opacity-80">
+            Incidents escalate if you're too slow. Prioritise, strategise and
+            keep your city safe under pressure.
+          </p>
+        </div>
       </div>
     </section>
 
-    <div class="container">
-      <section>
-        <h2>Welcome to Jobee Development</h2>
-        <p>
-          We are a passionate team dedicated to designing and developing high-quality mobile applications for various platforms. From concept to launch, we bring your ideas to life with clean code and user-centric design.
+    <!-- ====================================== -->
+    <!-- SCREENSHOTS                            -->
+    <!-- ====================================== -->
+    <section class="relative z-10 py-20 bg-gray-900/40 backdrop-blur">
+      <div class="max-w-6xl mx-auto px-6 text-center">
+        <h2 class="text-2xl font-semibold mb-10">Sneak Peek</h2>
+        <div class="flex flex-wrap justify-center gap-2 lg:flex-nowrap">
+          <img
+            src="/images/dc-screen1.png"
+            width="220"
+            height="440"
+            alt="Dispatch Commander — system initialization screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft w-[220px] h-auto"
+            loading="lazy"
+          />
+          <img
+            src="/images/dc-screen2.png"
+            width="220"
+            height="440"
+            alt="Dispatch Commander — operations center UI screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft w-[220px] h-auto"
+            loading="lazy"
+          />
+          <img
+            src="/images/dc-screen3.png"
+            width="220"
+            height="440"
+            alt="Dispatch Commander — incident details screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft w-[220px] h-auto"
+            loading="lazy"
+          />
+          <img
+            src="/images/dc-screen4.png"
+            width="220"
+            height="440"
+            alt="Dispatch Commander — global incident map screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft w-[220px] h-auto"
+            loading="lazy"
+          />
+        </div>
+        <p class="code text-xs mt-6 opacity-70">
+          *Pre-release screenshots from build v2.4.1 — UI and gameplay may change
+          before launch.*
         </p>
-        <p>
-          Whether you need a utility app, a fun game, or a complex business solution, we have the expertise to deliver.
-        </p>
-      </section>
+      </div>
+    </section>
 
-      <section>
-        <h2>Our Services</h2>
-        <!-- Consider using icons here -->
-        <p><i class="fas fa-mobile-alt fa-fw"></i> <strong>Native App Development:</strong> Crafting seamless experiences for iOS and Android.</p>
-        <p><i class="fas fa-code fa-fw"></i> <strong>Cross-Platform Solutions:</strong> Efficient development using modern frameworks.</p>
-        <p><i class="fas fa-lightbulb fa-fw"></i> <strong>UI/UX Design:</strong> Creating intuitive and visually appealing interfaces.</p>
-        <p><i class="fas fa-cogs fa-fw"></i> <strong>Maintenance & Support:</strong> Keeping your apps running smoothly post-launch.</p>
-      </section>
+    <!-- ====================================== -->
+    <!-- FOLLOW / SOCIAL                        -->
+    <!-- ====================================== -->
+    <!-- <section class="relative z-10 py-24 px-6 text-center">
+      <h2 class="text-3xl font-semibold mb-4">Follow Our Build-Log</h2>
+      <p class="code max-w-lg mx-auto mb-8 opacity-90">
+        Get weekly dev updates, behind-the-scenes clips and launch news.
+      </p>
+      <div class="flex flex-wrap justify-center gap-6">
+        <a
+          href="https://twitter.com/"
+          class="code px-6 py-3 border border-accent rounded-md glow hover:bg-accent-soft transition"
+          target="_blank" rel="noopener"
+          >Twitter</a
+        >
+        <a
+          href="https://instagram.com/"
+          class="code px-6 py-3 border border-accent rounded-md glow hover:bg-accent-soft transition"
+          target="_blank" rel="noopener"
+          >Instagram</a
+        >
+        <a
+          href="https://youtube.com/"
+          class="code px-6 py-3 border border-accent rounded-md glow hover:bg-accent-soft transition"
+          target="_blank" rel="noopener"
+          >YouTube</a
+        >
+      </div>
+    </section> -->
 
-      <section>
-          <h2>Featured App</h2>
-          <h3>Dispatch Commander</h3>
-          <p>
-              Our flagship logistics and dispatch management tool. Streamline your operations with powerful features designed for efficiency.
-              <!-- Add more descriptive text -->
-          </p>
-          <a href="apps.html" class="btn">Learn More</a>
-      </section>
-    </div>
-  </main>
+    <!-- ====================================== -->
+    <!-- DISCLAIMER / FOOTER                    -->
+    <!-- ====================================== -->
+    <footer class="relative z-10 text-center py-12 code text-xs opacity-70 space-y-4 px-6">
+      <p>
+        Dispatch Commander is a <strong>fictional simulation game</strong>. All
+        incidents, agencies and data within the app are simulated and should
+        not be used for real-world emergency response.
+      </p>
+      <p>
+        &copy; <span id="year"></span> Jobee Development •
+        <a
+          href="/privacy.html"
+          class="underline hover:text-green-300"
+          >Privacy Policy</a
+        >
+      </p>
+    </footer>
 
-  <footer>
-    <p>© 2025 Jobee Developments. All Rights Reserved.</p>
-    <!-- Optional: Add social media links here -->
-    <!-- <p>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-    </p> -->
-  </footer>
+    <!-- ====================================== -->
+    <!-- SCRIPTS                                -->
+    <!-- ====================================== -->
+    <script>
+      // update year automatically
+      document.getElementById("year").textContent = new Date().getFullYear();
 
-</body>
+      // animated command-line feed
+      const feedElem = document.getElementById("cli-feed");
+      const cursor = document.createElement("span");
+      cursor.className = "cursor";
+      feedElem.appendChild(cursor);
+
+      const lines = [
+        "[SYSTEM] Connecting to global dispatch network…",
+        "[OK] Secure channel established.",
+        "[INFO] Incident feed online.",
+        "[ALERT] Emergencies incoming…",
+        "> Launching soon in 2025..."
+      ];
+
+      let lineIdx = 0;
+      let charIdx = 0;
+
+      function typeNextChar() {
+        if (lineIdx >= lines.length) return; // done
+
+        const currentLine = lines[lineIdx];
+        if (charIdx < currentLine.length) {
+          cursor.insertAdjacentText("beforebegin", currentLine[charIdx]);
+          charIdx++;
+          setTimeout(typeNextChar, 30);
+        } else {
+          // line finished – move to next after brief pause
+          cursor.insertAdjacentHTML("beforebegin", "<br>");
+          lineIdx++;
+          charIdx = 0;
+          setTimeout(typeNextChar, 400);
+        }
+      }
+
+      // kick off typing after slight delay
+      setTimeout(typeNextChar, 600);
+    </script>
+  </body>
 </html>
