--- a/index.html
+++ b/index.html
@@ -1,20 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- ===================================================== -->
+    <!--      DISPATCH COMMANDER – Landing Page (prod)         -->
+    <!-- ===================================================== -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Jobee Development — Dispatch Commander (Coming Soon)</title>
+    <!-- PRIMARY SEO / ASO -->
+    <title>Dispatch Commander – Global Emergency-Dispatch Simulator | Jobee Development</title>
     <meta
       name="description"
-      content="Dispatch Commander – a real-time global emergency-dispatch simulator for mobile. Coordinate police, fire & ambulance units anywhere on Earth. Coming soon from Jobee Development."
+      content="Dispatch Commander is a real-time global emergency-dispatch simulation game for iOS & Android. Coordinate police, fire & ambulance units anywhere on earth. Coming soon from Jobee Development."
     />
+    <meta
+      name="keywords"
+      content="dispatch commander, emergency dispatch game, police fire ambulance simulator, mobile simulation game, real time strategy app, jobee development"
+    />
+    <link rel="canonical" href="https://jobee.dev/" />
 
-    <!-- TailwindCSS -->
+    <!-- OPEN GRAPH -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jobee.dev/" />
+    <meta property="og:title" content="Dispatch Commander – Global Emergency-Dispatch Simulator" />
+    <meta
+      property="og:description"
+      content="Coordinate police, fire & ambulance units anywhere on earth in this real-time mobile simulation game. Launching soon."
+    />
+    <meta property="og:image" content="https://jobee.dev/og-image.png" />
+
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@jobee_dev" />
+    <meta name="twitter:title" content="Dispatch Commander – Global Emergency-Dispatch Simulator" />
+    <meta
+      name="twitter:description"
+      content="Coordinate police, fire & ambulance units anywhere on earth in this real-time mobile simulation game. Launching soon."
+    />
+    <meta name="twitter:image" content="https://jobee.dev/og-image.png" />
+
+    <!-- STRUCTURED DATA -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "MobileApplication",
+        "name": "Dispatch Commander",
+        "operatingSystem": "iOS, Android",
+        "applicationCategory": "GameApplication",
+        "genre": "Simulation",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Jobee Development",
+          "url": "https://jobee.dev"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0.00",
+          "priceCurrency": "USD"
+        },
+        "description": "Dispatch Commander is a real-time global emergency-dispatch simulation game for mobile devices."
+      }
+    </script>
+
+    <!-- TAILWINDCSS (CDN) -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Fonts & Icons -->
+    <!-- FONTS & ICONS -->
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600;700&family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -24,6 +76,7 @@
       rel="stylesheet"
     />
 
+    <!-- THEME -->
     <style>
       :root {
         --bg: #000;
@@ -46,7 +99,6 @@
         color: var(--accent);
         text-shadow: 0 0 8px var(--accent), 0 0 16px var(--accent);
       }
-      /* grid backdrop */
       .grid-overlay {
         background-image: linear-gradient(
             to right,
@@ -57,107 +109,217 @@
         background-size: 60px 60px;
         pointer-events: none;
       }
+      /* CLI cursor */
+      .cursor {
+        display: inline-block;
+        width: 12px;
+        height: 16px;
+        background: var(--accent);
+        margin-left: 4px;
+        animation: blink 1s steps(2, start) infinite;
+      }
+      @keyframes blink {
+        to {
+          visibility: hidden;
+        }
+      }
     </style>
   </head>
   <body>
-    <!-- decorative grid -->
+    <!-- ====================================== -->
+    <!-- DECORATIVE GRID                       -->
+    <!-- ====================================== -->
     <div class="fixed inset-0 grid-overlay z-0"></div>
 
-    <!-- HERO -->
+    <!-- ====================================== -->
+    <!-- HERO                                   -->
+    <!-- ====================================== -->
     <header class="relative z-10 flex flex-col items-center justify-center h-screen text-center p-6">
       <h1 class="text-5xl sm:text-7xl font-extrabold mb-6 glow">
         DISPATCH COMMANDER
       </h1>
-      <p class="code text-lg sm:text-xl max-w-xl mx-auto opacity-90">
-        Real-time <span class="glow">global</span> emergency-dispatch simulator.
-        Coordinate police, fire & ambulance units <span class="glow">anywhere</span>
-        on Earth.
+      <p class="code text-lg sm:text-xl max-w-xl mx-auto mb-8">
+        Real-time <span class="glow">global</span> emergency-dispatch <span>simulation</span> game. Coordinate police, fire & ambulance units <span class="glow">anywhere</span> on Earth.
       </p>
+
+      <!-- Animated Command-Line Feed -->
+      <pre id="cli-feed" class="code text-left text-sm sm:text-base max-w-2xl mx-auto bg-black/60 rounded-lg p-6 border border-accent-soft overflow-hidden shadow-lg"></pre>
     </header>
 
-    <!-- FEATURES -->
+    <!-- ====================================== -->
+    <!-- FEATURES                               -->
+    <!-- ====================================== -->
     <section class="relative z-10 py-20 px-6 max-w-6xl mx-auto">
       <div class="grid gap-12 md:grid-cols-3">
-        <!-- Global Coverage -->
+        <!-- 1. Global Coverage -->
         <div>
-          <span class="material-icons text-3xl glow mb-3">public</span>
-          <h3 class="text-xl font-semibold mb-2">Anywhere on the Globe</h3>
+          <span class="material-icons text-3xl glow mb-3" aria-hidden="true">public</span>
+          <h2 class="text-xl font-semibold mb-2">Anywhere on the Globe</h2>
           <p class="code text-sm opacity-80">
-            Pick any city – Dispatch Commander renders real-world maps so you
-            can defend the places you care about.
+            Tap any city – Dispatch Commander renders real-world maps so you can
+            protect the places you know.
           </p>
         </div>
-        <!-- Multi-agency -->
+        <!-- 2. Multi-Agency -->
         <div>
-          <span class="material-icons text-3xl glow mb-3">groups</span>
-          <h3 class="text-xl font-semibold mb-2">Multi-Agency Response</h3>
+          <span class="material-icons text-3xl glow mb-3" aria-hidden="true">groups</span>
+          <h2 class="text-xl font-semibold mb-2">Police · Fire · Ambulance</h2>
           <p class="code text-sm opacity-80">
-            Seamlessly deploy police, fire & ambulance resources, juggling
-            limited fleets and escalating threats.
+            Balance limited resources and evolving threats across all three core
+            emergency services.
           </p>
         </div>
-        <!-- Real-time decisions -->
+        <!-- 3. Real-Time Decisions -->
         <div>
-          <span class="material-icons text-3xl glow mb-3">access_time</span>
-          <h3 class="text-xl font-semibold mb-2">Every Second Counts</h3>
+          <span class="material-icons text-3xl glow mb-3" aria-hidden="true">access_time</span>
+          <h2 class="text-xl font-semibold mb-2">Every Second Counts</h2>
           <p class="code text-sm opacity-80">
-            Incidents evolve in real time. Prioritise, strategise and keep your
-            city safe under pressure.
+            Incidents escalate if you're too slow. Prioritise, strategise and
+            keep your city safe under pressure.
           </p>
         </div>
       </div>
     </section>
 
-    <!-- SCREENSHOTS -->
+    <!-- ====================================== -->
+    <!-- SCREENSHOTS                            -->
+    <!-- ====================================== -->
     <section class="relative z-10 py-20 bg-gray-900/40 backdrop-blur">
-      <div class="max-w-5xl mx-auto px-6 text-center">
+      <div class="max-w-6xl mx-auto px-6 text-center">
         <h2 class="text-2xl font-semibold mb-10">Sneak Peek</h2>
-        <div class="grid sm:grid-cols-2 gap-8">
+        <div class="flex flex-wrap justify-center gap-2 lg:flex-nowrap">
           <img
-            src="/assets/dispatch-init.png"
-            alt="System initialisation screen"
-            class="rounded-lg shadow-lg border border-accent-soft"
+            src="/images/dc-screen1.png"
+            width="220"
+            height="440"
+            alt="Dispatch Commander — system initialization screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft w-[220px] h-auto"
+            loading="lazy"
           />
           <img
-            src="/assets/dispatch-hub.png"
-            alt="Operations hub UI"
-            class="rounded-lg shadow-lg border border-accent-soft"
+            src="/images/dc-screen2.png"
+            width="220"
+            height="440"
+            alt="Dispatch Commander — operations center UI screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft w-[220px] h-auto"
+            loading="lazy"
           />
           <img
-            src="/assets/dispatch-map.png"
-            alt="Global incident map"
-            class="rounded-lg shadow-lg border border-accent-soft sm:col-span-2"
+            src="/images/dc-screen3.png"
+            width="220"
+            height="440"
+            alt="Dispatch Commander — incident details screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft w-[220px] h-auto"
+            loading="lazy"
+          />
+          <img
+            src="/images/dc-screen4.png"
+            width="220"
+            height="440"
+            alt="Dispatch Commander — global incident map screenshot"
+            class="rounded-lg shadow-lg border border-accent-soft w-[220px] h-auto"
+            loading="lazy"
           />
         </div>
         <p class="code text-xs mt-6 opacity-70">
-          *Pre-release screenshots, subject to change.
+          *Pre-release screenshots from build v2.4.1 — UI and gameplay may change
+          before launch.*
         </p>
       </div>
     </section>
 
-    <!-- FOLLOW SECTION -->
-    <section class="relative z-10 py-24 px-6 text-center">
+    <!-- ====================================== -->
+    <!-- FOLLOW / SOCIAL                        -->
+    <!-- ====================================== -->
+    <!-- <section class="relative z-10 py-24 px-6 text-center">
       <h2 class="text-3xl font-semibold mb-4">Follow Our Build-Log</h2>
       <p class="code max-w-lg mx-auto mb-8 opacity-90">
-        We’re sharing dev updates, behind-the-scenes clips and launch news on
-        social media.
+        Get weekly dev updates, behind-the-scenes clips and launch news.
       </p>
-      <div class="flex justify-center gap-6">
+      <div class="flex flex-wrap justify-center gap-6">
         <a
-          href="https://instagram.com/jobee_dev"
+          href="https://twitter.com/"
           class="code px-6 py-3 border border-accent rounded-md glow hover:bg-accent-soft transition"
           target="_blank" rel="noopener"
-        >Instagram</a>
+          >Twitter</a
+        >
+        <a
+          href="https://instagram.com/"
+          class="code px-6 py-3 border border-accent rounded-md glow hover:bg-accent-soft transition"
+          target="_blank" rel="noopener"
+          >Instagram</a
+        >
+        <a
+          href="https://youtube.com/"
+          class="code px-6 py-3 border border-accent rounded-md glow hover:bg-accent-soft transition"
+          target="_blank" rel="noopener"
+          >YouTube</a
+        >
       </div>
-    </section>
+    </section> -->
 
-    <!-- FOOTER -->
-    <footer class="relative z-10 text-center py-10 code text-sm opacity-60">
-      &copy; <span id="year"></span> Jobee Development
+    <!-- ====================================== -->
+    <!-- DISCLAIMER / FOOTER                    -->
+    <!-- ====================================== -->
+    <footer class="relative z-10 text-center py-12 code text-xs opacity-70 space-y-4 px-6">
+      <p>
+        Dispatch Commander is a <strong>fictional simulation game</strong>. All
+        incidents, agencies and data within the app are simulated and should
+        not be used for real-world emergency response.
+      </p>
+      <p>
+        &copy; <span id="year"></span> Jobee Development •
+        <a
+          href="/privacy.html"
+          class="underline hover:text-green-300"
+          >Privacy Policy</a
+        >
+      </p>
     </footer>
 
+    <!-- ====================================== -->
+    <!-- SCRIPTS                                -->
+    <!-- ====================================== -->
     <script>
+      // update year automatically
       document.getElementById("year").textContent = new Date().getFullYear();
+
+      // animated command-line feed
+      const feedElem = document.getElementById("cli-feed");
+      const cursor = document.createElement("span");
+      cursor.className = "cursor";
+      feedElem.appendChild(cursor);
+
+      const lines = [
+        "[SYSTEM] Connecting to global dispatch network…",
+        "[OK] Secure channel established.",
+        "[INFO] Incident feed online.",
+        "[ALERT] Emergencies incoming…",
+        "> Launching soon in 2025..."
+      ];
+
+      let lineIdx = 0;
+      let charIdx = 0;
+
+      function typeNextChar() {
+        if (lineIdx >= lines.length) return; // done
+
+        const currentLine = lines[lineIdx];
+        if (charIdx < currentLine.length) {
+          cursor.insertAdjacentText("beforebegin", currentLine[charIdx]);
+          charIdx++;
+          setTimeout(typeNextChar, 30);
+        } else {
+          // line finished – move to next after brief pause
+          cursor.insertAdjacentHTML("beforebegin", "<br>");
+          lineIdx++;
+          charIdx = 0;
+          setTimeout(typeNextChar, 400);
+        }
+      }
+
+      // kick off typing after slight delay
+      setTimeout(typeNextChar, 600);
     </script>
   </body>
 </html>
