--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </p>
 
       <!-- Animated Command-Line Feed -->
-      <pre id="cli-feed" class="code text-left text-sm sm:text-base max-w-2xl mx-auto bg-black/60 rounded-lg p-6 border border-accent-soft overflow-hidden shadow-lg"></pre>
+      <pre id="cli-feed" class="code text-left text-xs xs:text-sm sm:text-base w-full max-w-full sm:max-w-2xl mx-auto bg-black/60 rounded-lg p-3 sm:p-6 border border-accent-soft overflow-x-auto whitespace-pre-wrap break-words shadow-lg h-40 xs:h-48 sm:h-56"></pre>
     </header>
 
     <!-- ====================================== -->
